# ai-assistant

./: .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  TODO.md  VISION.md  WORKING.md  hatch_build.py  justfile  pyproject.toml
.claude/skills/dispatch-agents/: SKILL.md
.claude/skills/find-parallel-work/: SKILL.md
.github/workflows/: codex-review.yml  gate.yml
docs/: roadmap.md  smoke-test.md
docs/adr/: 0001-record-architecture-decisions.md  0002-foundational-stack-and-architecture.md  0003-development-standards.md  0004-privacy-and-data-handling.md  0005-memory-model.md  0006-embedding-seam.md  0007-memory-data-rights.md  0008-context-model.md  0009-learning-model.md  0010-remote-ci-and-github-workflow.md  0011-model-resilience.md  0012-codex-review-in-ci.md  0013-model-routing-and-fallback.md  0014-planning-model.md  0015-simplify-the-agent-workflow.md  0016-tool-definition-and-registry.md  0017-egress-boundaries.md  0018-tool-declaration-corrections.md  0019-no-state-claims-in-living-documents.md  0020-making-the-review-loop-terminate.md  0021-permission-decisions-and-the-audit-trail.md  0022-the-closed-learning-loop.md  0023-naive-datetimes-are-rejected-not-normalised.md  0024-embedding-model-provisioning.md  0024-the-embedding-model-is-a-build-input.md  0025-persistent-review-session.md  0026-the-injected-clock-seam.md  0027-what-a-review-covers-when-the-base-moves.md  0028-the-memory-write-path-is-a-contract.md  0029-the-tool-invocation-contract.md  0030-what-counts-as-a-datetime-at-a-validating-seam.md  0031-corrections-to-the-tool-invocation-contract.md  0032-the-failure-transport-at-the-tool-seam.md  0033-bounding-the-drain-after-a-required-source-fails.md  0034-what-an-executor-may-do-between-the-claim-and-the-call.md  0036-the-first-permissions-implementations.md  0037-joining-selection-permission-and-execution.md  0038-a-user-assertion-supersedes-a-conflicting-inference.md  0039-what-a-finished-step-durably-records-about-why.md  0040-reinforcement-and-supersession-are-different-rulings.md  (+16 more)
docs/review/: adversarial.md  architecture.md  guide.md
scripts/: claim-workspace.sh  claim-workspaces.sh  codex-review.sh  codex_review_decision.py  list-workspaces.sh  project_status.py  prune-workspaces.sh  release-workspace.sh  review_history.py  ship.sh
src/ai_assistant/: __init__.py
src/ai_assistant/app/: __init__.py  composition.py
src/ai_assistant/context/: __init__.py  provider.py  sources.py
src/ai_assistant/core/: __init__.py  clock.py  config.py  errors.py  logging.py  protocols.py  types.py
src/ai_assistant/interfaces/: __init__.py  cli.py
src/ai_assistant/learning/: __init__.py  processor.py
src/ai_assistant/memory/: __init__.py  ingest.py  policy.py  sqlite_store.py  store.py
src/ai_assistant/models/: __init__.py  embedding_artifact.py  embeddings.py  fastembed_embedder.py  provider.py  retry.py  routing.py
src/ai_assistant/orchestration/: __init__.py  capability_alias.py  engine.py  executor.py  loop.py  runner.py
src/ai_assistant/permissions/: __init__.py  audit.py  policy.py
src/ai_assistant/planning/: __init__.py  execution.py  planner.py  sqlite_store.py  store.py
src/ai_assistant/testing/: __init__.py  context.py  embeddings.py  invoker.py  learning.py  memory.py  models.py  permissions.py  planning.py  policy.py  tools.py  writer.py
src/ai_assistant/tools/: __init__.py  builtin.py  invocation.py  registry.py
tests/: conftest.py  test_clock_seams.py  test_smoke.py
tests/app/: test_composition.py
tests/context/: context_provider_contract.py  test_context_provider.py  test_fake_context_provider.py  test_sources.py
tests/core/: hostile_instants.py  test_clock.py  test_config.py  test_errors.py  test_instant_coverage.py  test_logging.py  test_permission_types.py  test_planning_types.py  test_protocol_triad.py  test_tool_invocation_types.py  test_tool_types.py  test_types.py  test_utc_instant.py
tests/interfaces/: test_cli.py
tests/learning/: feedback_processor_contract.py  test_fake_processor.py  test_loop_integration.py  test_processor.py
tests/memory/: _atomic_crash_child.py  memory_policy_contract.py  memory_store_contract.py  memory_writer_contract.py  test_fake_policy.py  test_fake_store.py  test_fake_writer.py  test_ingest.py  test_ingest_contract.py  test_policy.py  test_sqlite_store.py  test_store.py
tests/models/: embedder_contract.py  model_provider_contract.py  network_guard.py  test_embedding_artifact.py  test_embedding_artifact_packaging.py  test_embeddings.py  test_fake_embedder.py  test_fake_provider.py  test_fastembed_embedder.py  test_genai_prices_snapshot.py  test_provider.py  test_retry.py  test_routing.py
tests/orchestration/: test_capability_alias.py  test_engine.py  test_engine_restart_recovery.py  test_executor.py  test_loop.py  test_runner.py
tests/permissions/: action_policy_contract.py  audit_trail_contract.py  permission_builders.py  test_action_policy.py  test_audit.py  test_fake_action_policy.py  test_fake_audit_trail.py
tests/planning/: plan_store_contract.py  planner_contract.py  test_execution.py  test_fake_planning.py  test_plan_store.py  test_planner.py  test_sqlite_plan_store.py
tests/scripts/: _fake_codex.py  test_codex_review_base.py  test_codex_review_decision.py  test_codex_review_sandbox.py  test_codex_review_session.py  test_project_status.py  test_review_aggregate.py  test_review_artifact.py  test_review_history.py  test_ship.py  test_ship_base_drift.py  test_workspace.py  test_workspace_admin.py
tests/tools/: test_builtin.py  test_fake_tool_invoker.py  test_fake_tool_registry.py  test_invocation.py  test_registry.py  tool_invoker_contract.py  tool_registry_contract.py
