[project]
name = "ai-assistant"
version = "0.1.0"
description = "A model-agnostic AI operating system that orchestrates language models, long-term memory, and real-world tools into a deeply personalized everyday assistant."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Leonardo Pivato", email = "pivato.l@northeastern.edu" },
]
keywords = ["ai", "assistant", "orchestration", "llm", "agent", "memory"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/leonardopivato/ai-assistant"
Repository = "https://github.com/leonardopivato/ai-assistant"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

# -----------------------------------------------------------------------------
# Ruff — linter + formatter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["ai_assistant"]

[tool.ruff.format]
docstring-code-format = true

# -----------------------------------------------------------------------------
# mypy — static type checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
files = ["src", "tests"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"

# -----------------------------------------------------------------------------
# coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/ai_assistant"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
