[project]
name = "ai-assistant"
version = "0.1.0"
description = "A model-agnostic AI operating system that orchestrates language models, long-term memory, and real-world tools into a deeply personalized everyday assistant."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
# `THIRD-PARTY-NOTICES.md` is here because the distributions redistribute the
# vendored embedding model (ADR-0024): shipping the weights under our package
# name means shipping the upstream notices with them, in the wheel and in the
# sdist. `LICENSE` covers this project's own code only.
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.md"]
authors = [
    { name = "Leonardo Pivato", email = "pivato.l@northeastern.edu" },
]
keywords = ["ai", "assistant", "orchestration", "llm", "agent", "memory"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    # ADR-0024 §3 — the behaviour-affecting stack is exact-pinned, not ranged.
    # These four are audited as behaviour-affecting for the vendored embedding
    # model: fastembed (pooling, on-disk layout), tokenizers (preprocessing),
    # onnxruntime (inference kernels) and numpy (this model's normalisation).
    # A published wheel would otherwise resolve them fresh, so two installs
    # could produce different vectors under identical weights. Each is pinned
    # to the version the lockfile already fixes for `uv sync`; the same set
    # feeds `model_id`, so a release that bumps any of them re-embeds.
    "fastembed==0.8.0",
    "numpy==2.5.1",
    "onnxruntime==1.27.0",
    "tokenizers==0.23.1",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[anthropic]>=2.11.0",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sqlite-vec>=0.1.6",
    "structlog>=26.1.0",
    "typer>=0.27.0",
]

[project.scripts]
assistant = "ai_assistant.interfaces.cli:app"

[dependency-groups]
dev = [
    # The acceptance tests ADR-0024 §5 requires build a real wheel and a real
    # sdist in-process, with the network denied — so the build backend is a
    # test dependency as well as a build one.
    "hatchling>=1.27",
    # Hatchling defers to it when building an editable wheel, which one of those
    # acceptance tests does; a build frontend would install it, and these tests
    # deliberately do not use one.
    "editables>=0.5",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pre-commit>=4.6.0",
    "import-linter>=2.0",
    "pip-audit>=2.7",
]

# ADR-0024 §4 supersedes ADR-0002's `uv_build` clause: `uv_build` supports no
# build hooks, and the embedding model has to be fetched and verified during the
# build. `huggingface-hub` is a build requirement because the acquisition seam in
# `models/` uses it — see `hatch_build.py`.
[build-system]
requires = ["hatchling>=1.27", "huggingface-hub>=0.34,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_assistant"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

# -----------------------------------------------------------------------------
# Ruff — linter + formatter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (Google convention, configured below)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins (no shadowing builtins)
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "TID",  # flake8-tidy-imports (ban relative imports)
    "DTZ",  # flake8-datetimez (timezone-aware datetimes)
    "ASYNC",# flake8-async (async pitfalls)
    "S",    # flake8-bandit (security)
    "ERA",  # eradicate (no commented-out code)
    "PL",   # pylint (subset)
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may assert, use magic values, and skip docstrings.
"tests/**/*.py" = ["S101", "D", "PLR2004", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["ai_assistant"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
# pydantic evaluates annotations at runtime to build models, so imports used in
# annotations on these base classes must stay at module scope (not TYPE_CHECKING).
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]

[tool.ruff.format]
docstring-code-format = true

# -----------------------------------------------------------------------------
# mypy — static type checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
files = ["src", "tests", "hatch_build.py"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

# sqlite-vec ships no type stubs (no py.typed); it is used only in memory/.
[[tool.mypy.overrides]]
module = ["sqlite_vec"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: tests that touch the network, filesystem, or external services",
    # On a conformance-suite test only: this obligation may not apply to every
    # implementation, so the test's own body may `pytest.skip()` out of it. The
    # Protocol-triad check honours a skipped obligation only when the suite
    # declared it optional this way (tests/core/test_protocol_triad.py).
    "optional_obligation: a contract test an implementation may legitimately skip",
]

# -----------------------------------------------------------------------------
# import-linter — mechanically enforce the architecture's dependency rules
# Run with: uv run lint-imports
# -----------------------------------------------------------------------------
[tool.importlinter]
root_package = "ai_assistant"
# Required because a contract forbids importing external packages (provider SDKs).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core depends on nothing else in ai_assistant"
type = "forbidden"
source_modules = ["ai_assistant.core"]
forbidden_modules = [
    "ai_assistant.models",
    "ai_assistant.memory",
    "ai_assistant.context",
    "ai_assistant.planning",
    "ai_assistant.tools",
    "ai_assistant.permissions",
    "ai_assistant.learning",
    "ai_assistant.orchestration",
    "ai_assistant.interfaces",
]

[[tool.importlinter.contracts]]
name = "subsystems are independent of each other"
type = "independence"
modules = [
    "ai_assistant.models",
    "ai_assistant.memory",
    "ai_assistant.context",
    "ai_assistant.planning",
    "ai_assistant.tools",
    "ai_assistant.permissions",
    "ai_assistant.learning",
]

[[tool.importlinter.contracts]]
name = "subsystems do not import orchestration or interfaces"
type = "forbidden"
source_modules = [
    "ai_assistant.models",
    "ai_assistant.memory",
    "ai_assistant.context",
    "ai_assistant.planning",
    "ai_assistant.tools",
    "ai_assistant.permissions",
    "ai_assistant.learning",
]
forbidden_modules = ["ai_assistant.orchestration", "ai_assistant.interfaces"]

[[tool.importlinter.contracts]]
name = "provider SDKs are confined to the models layer"
type = "forbidden"
# Direct imports only: the ban is "do not `import pydantic_ai`; reach models through
# its seam". The composition root (`ai_assistant.app`) legitimately imports the
# `models` package to construct `PydanticAIProvider`, so it reaches the SDK only
# *indirectly, through models* — which is exactly what this contract permits. No
# other source imports `models` at all, so this keeps the direct ban intact for them.
allow_indirect_imports = "true"
source_modules = [
    "ai_assistant.core",
    "ai_assistant.memory",
    "ai_assistant.context",
    "ai_assistant.planning",
    "ai_assistant.tools",
    "ai_assistant.permissions",
    "ai_assistant.learning",
    "ai_assistant.orchestration",
    "ai_assistant.interfaces",
    # The composition root wires concrete subsystems but still reaches models only
    # through the `ModelProvider` seam, never a provider SDK (ADR-0042 §Consequences).
    "ai_assistant.app",
]
# `huggingface_hub` is here for ADR-0024 §4: the model-artifact acquisition seam
# stays owned by `models/`, and this makes that mechanically enforced rather than
# review-checked (issue #66's shape).
forbidden_modules = [
    "pydantic_ai",
    "anthropic",
    "openai",
    "fastembed",
    "huggingface_hub",
    "onnxruntime",
    "tokenizers",
]

[[tool.importlinter.contracts]]
name = "testing doubles are imported only by tests, never by production code"
type = "forbidden"
source_modules = [
    "ai_assistant.core",
    "ai_assistant.models",
    "ai_assistant.memory",
    "ai_assistant.context",
    "ai_assistant.planning",
    "ai_assistant.tools",
    "ai_assistant.permissions",
    "ai_assistant.learning",
    "ai_assistant.orchestration",
    "ai_assistant.interfaces",
    # The composition root is production code, so the same ban applies (ADR-0042 §Consequences).
    "ai_assistant.app",
]
forbidden_modules = ["ai_assistant.testing"]

[[tool.importlinter.contracts]]
# ADR-0042 §6: an interface adapter depends on the composition root's builder and
# the `orchestration` façade it returns, and on **no subsystem** — the concrete
# imports are quarantined in `ai_assistant.app`, which is what makes this guard
# well-formed rather than self-contradictory.
name = "interface adapters do not import subsystems directly"
type = "forbidden"
# Direct imports only (ADR-0042 §6): an adapter reaches a subsystem *only* through
# the composition root and the façade — never `import ai_assistant.memory` itself.
# The indirect chain `interfaces -> app -> subsystem` is the sanctioned path and is
# permitted; a direct `interfaces -> subsystem` edge is what this forbids.
allow_indirect_imports = "true"
source_modules = ["ai_assistant.interfaces"]
forbidden_modules = [
    "ai_assistant.models",
    "ai_assistant.memory",
    "ai_assistant.context",
    "ai_assistant.planning",
    "ai_assistant.tools",
    "ai_assistant.permissions",
    "ai_assistant.learning",
]
